--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Hello JS2021!</h1>
     <h2>Today is a beautiful day!</h2>
     <p>Let's learn Javascript</p>
+    <h3>Just trying to understand git hub a bit better</h3>
 </body>
 </html>
