--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Hello JS2021!</h1>
-</body>
+    <ul>
+      <li>
+        <a href="/JS-003/PhpConToSqlExamples.html"
+          >Interact with database PHP</a
+        >
+      </li>
+      <li>
+        <a href="/JS-003/ValidationLoginForm.html"
+          >Validate login credentials</a
+        >
+      </li>
+      <li>
+        <a href="/JS-003/UserSignup.html">User Signup</a>
+      </li>
+      <li>
+        <a href="/JS-003/UserLogin.html">User Login</a>
+      </li>
+    </ul>
+  </body>
 </html>
