--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h2>Today is a beautiful day!</h2>
     <p>Let's learn Javascript</p>
     <h3>Just trying to understand git hub a bit better</h3>
+    <a href="/JS-0003/PhpConToSqlExamples.html">Click!</a>
 </body>
 </html>
